[tool.poetry]
name = "youtube-tool"
version = "0.1.0"
description = ""
authors = ["Karan Singh <pyrotank41@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytube = "^15.0.0"
streamlit = "^1.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
